--- a/src/sections/AboutMe.astro
+++ b/src/sections/AboutMe.astro
@@ -11,7 +11,7 @@ import imageRocket from "../assets/Startup_Monochromatic.png";
         <div class="content">
             <h2>Hello, My name is Julio Santacruz, I'm a web developer</h2>
             <p>Let me help you with your project</p>
-            <a href="" class="resume-btn">Download Resume</a>
+            <a href="https://drive.google.com/file/d/1moeWPjBphzyKJLIIX4BtnKeL_-JHw1PQ/view?usp=drive_link" class="resume-btn" target="_blank">Download Resume</a>
         </div>
     </div>
 </section>
@@ -24,6 +24,7 @@ import imageRocket from "../assets/Startup_Monochromatic.png";
         flex-direction: row;
         align-items: center;
         justify-content: center;
+        background-attachment: fixed;
     }
     .AboutMe {
         display: flex;
