--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -17,6 +17,7 @@ import background from "../assets/HeroBackground.jpg";
     section {
         height: 100vh;
         width: 100vw;
+        background-attachment: fixed;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -24,7 +25,7 @@ import background from "../assets/HeroBackground.jpg";
     .title {
         position: relative;
         top: 30%;
-        width: 40%;
+        width: 55%;
         margin: auto;
         display: flex;
         flex-direction: column;
@@ -61,6 +62,9 @@ import background from "../assets/HeroBackground.jpg";
     @media screen and (max-width: 768px) {
         .title {
             width: 80%;
+            padding: 10px;
+            border-radius: 10px;
+
         }
     }
 
