--- a/src/layouts/Navbar.astro
+++ b/src/layouts/Navbar.astro
@@ -20,7 +20,7 @@ import logo from "../assets/logo_450x200_azul_trans.png";
         margin: 30px auto;
 
         position: sticky;
-        top: 10px;
+        top: 20px;
         z-index: 10;
     }
     nav {
@@ -46,7 +46,7 @@ import logo from "../assets/logo_450x200_azul_trans.png";
     a {
         /* width: 120px; */
         height: 40px;
-        background-color: rgb(255, 255, 255);
+        background-color: rgba(255, 255, 255, 0);
         line-height: 40px;
 
         /* box-shadow: 0px 3px 2px 1px rgba(0, 0, 0, 0.1); */
@@ -60,12 +60,21 @@ import logo from "../assets/logo_450x200_azul_trans.png";
     }
 
     @media screen and (max-width: 768px) {
-        header{
+        header {
             width: 90vw;
         }
     }
 
     @media screen and (max-width: 425px) {
+        a{
+            font-size:12px ;
+            height: 30px;
+        line-height: 30px;
+        }
+        .logo {
+        width: auto;
+        height: 30px;
+    }
     }
     @media screen and (max-width: 320px) {
     }
