--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,59 +1,61 @@
 ---
-import Layout from '../layouts/Layout.astro'
-import Hero from '../sections/Hero.astro'
-import Navbar from '../layouts/Navbar.astro';
-import AboutMe from '../sections/AboutMe.astro'
-import Skills from '../sections/Skills.astro';
-import Projects from '../sections/Projects.astro';
-import Contact from '../sections/Contact.astro';
-
+import Layout from "../layouts/Layout.astro";
+import Hero from "../sections/Hero.astro";
+import Navbar from "../layouts/Navbar.astro";
+import AboutMe from "../sections/AboutMe.astro";
+import Skills from "../sections/Skills.astro";
+import Projects from "../sections/Projects.astro";
+import Contact from "../sections/Contact.astro";
 ---
 
 <Layout title="JS Portfolio">
 	<main>
-		<Hero/>
-		<Navbar/>
-		<AboutMe/>
-		<Skills/>
-		<Projects/>
-		<Contact>
+		<Hero />
+		<Navbar />
+		<AboutMe />
+		<Skills />
+		<Projects />
+		<Contact />
 	</main>
+
+	<style>
+		:root{
+			--container-width:80%
+		}
+		html {
+			scroll-behavior: smooth;
+		}
+
+		body {
+			margin: 0 auto !important;
+			padding: 0;
+			box-sizing: border-box;
+		}
+
+		.instructions {
+			line-height: 1.6;
+			margin: 1rem 0;
+			border: 1px solid rgba(var(--accent), 25%);
+			background-color: white;
+			padding: 1rem;
+			border-radius: 0.4rem;
+		}
+		.instructions code {
+			font-size: 0.875em;
+			font-weight: bold;
+			background: rgba(var(--accent), 12%);
+			color: rgb(var(--accent));
+			border-radius: 4px;
+			padding: 0.3em 0.45em;
+		}
+		.instructions strong {
+			color: rgb(var(--accent));
+		}
+		.link-card-grid {
+			display: grid;
+			grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
+			gap: 1rem;
+			padding: 0;
+		}
+	</style>
 </Layout>
-
-<style>
-	html {
-  scroll-behavior: smooth;
-}
-
-	body {
-		margin: 0 auto !important;
-		padding: 0;
-		box-sizing: border-box;
-	}
-
-	.instructions {
-		line-height: 1.6;
-		margin: 1rem 0;
-		border: 1px solid rgba(var(--accent), 25%);
-		background-color: white;
-		padding: 1rem;
-		border-radius: 0.4rem;
-	}
-	.instructions code {
-		font-size: 0.875em;
-		font-weight: bold;
-		background: rgba(var(--accent), 12%);
-		color: rgb(var(--accent));
-		border-radius: 4px;
-		padding: 0.3em 0.45em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
-		padding: 0;
-	}
-</style>
