--- a/src/styles/CardDevTo.scss
+++ b/src/styles/CardDevTo.scss
@@ -1,4 +1,4 @@
-.CardProjects {
+.CardDevTo {
     margin: 20px 0;
     width: 300px;
     height: 220px;
@@ -25,9 +25,15 @@
     .CardContent {
         height: 30%;
         text-align: center;
+        display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
         h3 {
-            margin: 10px 0;
-            font-size: 20px;
+            margin: 5px 0;
+            font-size: 18px;
+            white-space: nowrap;
+            overflow: hidden;
+           text-overflow: ellipsis; 
         }
         ul {
             display: flex;
@@ -42,6 +48,7 @@
                 flex-direction: row;
 
                 align-items: center;
+                font-size: 12px;
             }
             .iconTech {
                 width: 20px;
@@ -58,7 +65,6 @@
         p {
             font-size: 12px;
         }
-      
         a {
             border-radius: 7px;
             border: 1px solid black;
@@ -74,33 +80,33 @@
         }
     }
 }
+.tag{
+    background: #235ad1;
+      color: white;
+      padding: 2px 5px;
+      border-radius: 3px;
+      box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.25);
+}
 
 @media screen and (max-width: 1024px) {
-         
 }
 
 @media screen and (max-width: 768px) {
-    
 }
 
 @media screen and (max-width: 425px) {
-    
 }
 @media screen and (max-width: 320px) {
     .CardProjects {
         width: 240px;
         height: 200px;
-    
+
         border-radius: 10px;
- 
+
         .CardContent {
-            
             h3 {
-                
                 font-size: 18px;
             }
-            
         }
-  
     }
 }
