--- a/src/layouts/BaseHead.astro
+++ b/src/layouts/BaseHead.astro
@@ -25,7 +25,7 @@ const favicon = '../assets/favicon.ico'
 	<link rel="apple-touch-icon" href="/images/icon/192x192.png" />
 	<link rel="manifest" href="/manifest.webmanifest" />
 	<meta name="google" content="notranslate" />
-	<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
+	<link rel="apple-touch-icon" sizes="57x57" href=".favico/apple-icon-57x57.png" />
 	<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" />
 	<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png" />
 	<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png" />
@@ -40,7 +40,7 @@ const favicon = '../assets/favicon.ico'
 		sizes="192x192"
 		href="/android-icon-192x192.png"
 	/>
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+	<link rel="icon" type="image/png" sizes="32x32" href="../assets/favico/favicon-32x32.png" />
 	<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 	<meta name="msapplication-TileColor" content="#2b5797" />
