--- a/src/layouts/BaseHead.astro
+++ b/src/layouts/BaseHead.astro
@@ -21,19 +21,19 @@ const favicon = '../assets/favicon.ico'
 	<link rel="canonical" href={canonicalURL} />
 
 	<!-- Global Metadata -->
-	<link rel="icon" href={favicon} />
+	<link rel="icon" type="image/x-icon"  href='favicon.ico' />
 	<link rel="apple-touch-icon" href="/images/icon/192x192.png" />
 	<link rel="manifest" href="/manifest.webmanifest" />
 	<meta name="google" content="notranslate" />
-	<link rel="apple-touch-icon" sizes="57x57" href=".favico/apple-icon-57x57.png" />
-	<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" />
-	<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png" />
-	<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png" />
-	<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png" />
-	<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png" />
-	<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png" />
-	<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png" />
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png" />
+	<link rel="apple-touch-icon" sizes="57x57" href="/favico/apple-icon-57x57.png" />
+	<link rel="apple-touch-icon" sizes="60x60" href="/favico/apple-icon-60x60.png" />
+	<link rel="apple-touch-icon" sizes="72x72" href="/favico/apple-icon-72x72.png" />
+	<link rel="apple-touch-icon" sizes="76x76" href="/favico/apple-icon-76x76.png" />
+	<link rel="apple-touch-icon" sizes="114x114" href="/favico/apple-icon-114x114.png" />
+	<link rel="apple-touch-icon" sizes="120x120" href="/favico/apple-icon-120x120.png" />
+	<link rel="apple-touch-icon" sizes="144x144" href="/favico/apple-icon-144x144.png" />
+	<link rel="apple-touch-icon" sizes="152x152" href="/favico/apple-icon-152x152.png" />
+	<link rel="apple-touch-icon" sizes="180x180" href="/favico/apple-icon-180x180.png" />
 	<link
 		rel="icon"
 		type="image/png"
