--- a/src/sections/Contact.astro
+++ b/src/sections/Contact.astro
@@ -9,13 +9,15 @@ import whattsappIcon from "../assets/Logos_SocialMedia_png/whatsapp-logo-240.png
 <section id="Contact">
     <div class="notification" id="notification">
         <div class="message">
-            <p>Sending 📩</p>
+            <h3>Sending 📩</h3>
         </div>
         <div class="progress" id="progress"></div>
     </div>
 
     <h3>Contact me... how?</h3>
-    <button class="project-card-btn" id="ContactFormButton" >Send me a Message 💬</button>
+    <button class="project-card-btn" id="ContactFormButton"
+        >Send me a Message 💬</button
+    >
     <div class="socialMediaGroup">
         <a href="https://github.com/juliosantacruz" target="_blank">
             <div class="socialIcon">
@@ -42,9 +44,7 @@ import whattsappIcon from "../assets/Logos_SocialMedia_png/whatsapp-logo-240.png
 
     <aside class="contactFormCard" id="contactFormCard">
         <form action="." class="contactForm" id="contactForm">
-            <div class="closeIcon">
-                x
-            </div>
+            <div class="closeIcon">x</div>
             <div id="formTitle"></div>
             <div id="formError"></div>
             <label for="name">Full Name</label>
@@ -66,12 +66,12 @@ import whattsappIcon from "../assets/Logos_SocialMedia_png/whatsapp-logo-240.png
 
 <script>
     // Aqui esta la logica del formulario de contacto
-    const ContactFormButton:any = document.getElementById("ContactFormButton");
-    const ContactForm:any = document.getElementById("contactFormCard");
-    const SubmitContactFormButton:any = document.getElementById(
+    const ContactFormButton: any = document.getElementById("ContactFormButton");
+    const ContactForm: any = document.getElementById("contactFormCard");
+    const SubmitContactFormButton: any = document.getElementById(
         "submitContactFormButton"
     );
-    const closeIcon:any = document.querySelector(".closeIcon");
+    const closeIcon: any = document.querySelector(".closeIcon");
 
     // logica para cerrar modal con icono de cierre
     closeIcon.addEventListener("click", () => {
@@ -79,59 +79,67 @@ import whattsappIcon from "../assets/Logos_SocialMedia_png/whatsapp-logo-240.png
     });
 
     // logica para abrir modal de contacto
-    ContactFormButton.addEventListener('click', ()=>{
+    ContactFormButton.addEventListener("click", () => {
         ContactForm.classList.toggle("spread");
-    })
-    
+    });
+
     // Accion de envio de formulario
-    // SubmitContactFormButton.onclick = () => {
-    //     SubmitContactForm();
-    // };
+    SubmitContactFormButton.onclick = () => {
+        SubmitContactForm();
+    };
 
     // Logica para envio de formulario
-    // function SubmitContactForm() {
-    //     var formdata = new FormData();
-    //     var name = document.getElementById("name").value;
-    //     var email = document.getElementById("email").value;
-    //     var message = document.getElementById("message").value;
+    function SubmitContactForm() {
+        var formdata = new FormData();
 
-    //     formdata.append("full_name", name);
-    //     formdata.append("email", email);
-    //     formdata.append("message", message);
+        var name = (document.getElementById("name") as HTMLInputElement).value;
+        var email = (document.getElementById("email") as HTMLInputElement)
+            .value;
+        var message = (document.getElementById("message") as HTMLInputElement)
+            .value;
 
-    //     const formError = document.getElementById("formError");
+        formdata.append("full_name", name);
+        formdata.append("email", email);
+        formdata.append("message", message);
 
-    //     var requestOptions = {
-    //         method: "POST",
-    //         body: formdata,
-    //         redirect: "follow",
-    //     };
+        const formError = document.getElementById("formError");
 
-    //     fetch(
-    //         "https://le-restapi-test.herokuapp.com/api/v1/contact",
-    //         requestOptions
-    //     )
-    //         .then((response) => response.text())
-    //         .then((result) => console.log(result))
-    //         .catch((error) => console.log("error", error));
+        var requestOptions: RequestInit = {
+            method: "POST",
+            body: formdata,
+            redirect: "follow",
+        };
 
-    //     const inputs = document.querySelectorAll("#name, #email, #message");
+        fetch(
+            "https://p01--restapi--qzvdk8qp7kvm.code.run/test/api/v1/portcontact",
+            requestOptions
+        )
+            .then((response) => response.text())
+            .then((result) => console.log(result))
+            .catch((error) => console.log("error", error));
 
-    //     inputs.forEach((input) => {
-    //         input.value = "";
-    //     });
+        const inputs: any = document.querySelectorAll(
+            "#name, #email, #message"
+        );
 
-    //     ContactForm.classList.toggle("spread");
-    //     animationMessage();
-    // }
+        inputs.forEach((input: any) => {
+            input.value = "";
+        });
 
-    // function animationMessage() {
-    //     const notification = document.getElementById("notification");
-    //     const notificacionBar = document.getElementById("progress");
+        ContactForm.classList.toggle("spread");
+        animationMessage();
+    }
 
-    //     notification.style.animation = "fade 5s linear forwards";
-    //     notificacionBar.style.animation = "progressBar 3s .25s linear forwards";
-    // }
+    function animationMessage() {
+        const notification = document.getElementById(
+            "notification"
+        ) as HTMLInputElement;
+        const notificacionBar = (document.getElementById("progress") as HTMLInputElement);
+
+        notification.style.display = 'flex'
+        notification.style.animation = "fade 5s linear forwards";
+        notificacionBar.style.animation = "progressBar 3s .25s linear forwards";
+    }
 </script>
 
 <style>
@@ -215,8 +223,9 @@ import whattsappIcon from "../assets/Logos_SocialMedia_png/whatsapp-logo-240.png
     .closeIcon {
         text-align: right;
         font-size: 30px;
+        cursor: pointer;
     }
-    .closeIcon i:hover {
+    .closeIcon:hover {
         text-align: right;
         font-size: 30px;
         transition: ease-in;
@@ -252,6 +261,7 @@ import whattsappIcon from "../assets/Logos_SocialMedia_png/whatsapp-logo-240.png
     .notification {
         position: relative;
         display: none;
+        text-align: center;
         flex-direction: column;
         justify-content: space-around;
         width: 50%;
@@ -273,11 +283,43 @@ import whattsappIcon from "../assets/Logos_SocialMedia_png/whatsapp-logo-240.png
         bottom: 5px;
         width: 10px;
         height: 3px;
-        background: linear-gradient(to right, #529dbd, #2150bf);
+        background: linear-gradient(to right, #7ad7ff, #2164ff);
         border-radius: 5px;
+        z-index: 100;
         /* animation: progressBar 3s .25s linear forwards; */
     }
-
+    @keyframes fade {
+        5% {
+            opacity: 1;
+            visibility: visible;
+            transform: translateY(0px);
+        }
+        60% {
+            background-color: #141519b6;
+        }
+        70% {
+            background-color: #00834e;
+        }
+        80% {
+            opacity: 1;
+            transform: translateY(0px);
+            background-color: #00af69;
+            color: #000;
+        }
+        95% {
+            opacity: 0;
+        }
+        100% {
+            opacity: 0;
+            transform: translateY(-50px);
+        }
+    }
+    @keyframes progressBar {
+        to {
+            width: calc(100% - 10px);
+        }
+    }
+    
     @media screen and (max-width: 1024px) {
         .title {
             width: 60%;
@@ -287,6 +329,9 @@ import whattsappIcon from "../assets/Logos_SocialMedia_png/whatsapp-logo-240.png
     @media screen and (max-width: 768px) {
         section {
             background-size: 1200px;
+        }
+        .contactFormCard {
+            width: 70%;
         }
     }
 
